# hook2mail

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dagger.json  docker-compose-scw.yml  docker-compose.yml  hook2mail.py  pyproject.toml
.dagger/: pyproject.toml
.dagger/src/hook_2_mail/: __init__.py  main.py
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: main.yml  pr.yml  release.yml  stale.yml
.llms/contextes/: dagger-llm-context.md
k8s/: configmap.yaml  deployment.yaml  service.yaml
tests/: Message-cloudnative-aixmarseille-cloudnative-aixmarseille-100.eml  html.json  simple.json
