[project]
name = "hook2mail"
version = "0.1.0"
description = "a simple hook to resend emails"
authors = [
    {name = "Frederic Leger",email = "frederic@webofmars.com"}
]
license = {text = "GPL-3"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (==3.1.0)",
]

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
dagger-io = "^0.15.3"
uuid = "^1.30"
